# CHAD

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
client/: CMakeLists.txt  README.md  client.cpp  temp.cpp
lib/: lib.c
server/: .clangd  .gitignore  README.md  main.c  nob.c
server/src/: cli_client.c  main.c  protocol_lws_minimal.c
